[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/harvester.gd" type="Script" id=1]
[ext_resource path="res://raw/harvester_big.png" type="Texture" id=2]
[ext_resource path="res://scenes/harvester_thresher_particles.tres" type="Material" id=3]
[ext_resource path="res://scenes/harvester_exhaust_particles.tres" type="Material" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 14.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 44.5 )

[node name="harvester" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="thresher" type="Node2D" parent="."]

[node name="thresher1" type="Node2D" parent="thresher"]
position = Vector2( -48, -40 )

[node name="particles1" type="Particles2D" parent="thresher/thresher1"]
position = Vector2( 0, -10 )
scale = Vector2( 1, 0.87722 )
emitting = false
amount = 128
lifetime = 0.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.5
local_coords = false
process_material = ExtResource( 3 )

[node name="thresher2" type="Node2D" parent="thresher"]
position = Vector2( 0, -40 )

[node name="particles2" type="Particles2D" parent="thresher/thresher2"]
position = Vector2( 0, -10 )
emitting = false
amount = 128
lifetime = 0.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.5
local_coords = false
process_material = ExtResource( 3 )

[node name="thresher3" type="Node2D" parent="thresher"]
position = Vector2( 48, -40 )

[node name="particles3" type="Particles2D" parent="thresher/thresher3"]
position = Vector2( 0, -10 )
emitting = false
amount = 128
lifetime = 0.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.5
local_coords = false
process_material = ExtResource( 3 )

[node name="thresher_shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -43.5 )
shape = SubResource( 1 )

[node name="harvester_shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 15.5 )
shape = SubResource( 2 )

[node name="camera" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -22, 61 )
scale = Vector2( 1, 0.87722 )

[node name="harvester_exhaust_particles" type="Particles2D" parent="."]
position = Vector2( -22, 61 )
scale = Vector2( 1, 0.87722 )
amount = 256
lifetime = 4.0
speed_scale = 2.0
local_coords = false
process_material = ExtResource( 4 )
